Enfore consistent request style Set button width to prevent verical stacking in case of long user names. Set text align on user link to ensure consistent alignment.

--- a/src/components/FriendRequests/friendrequests.module.css
+++ b/src/components/FriendRequests/friendrequests.module.css
@@ -42,3 +42,7 @@ button:hover {
   color: black;
   border-color: black;
 }
+
+.btnContainer {
+  min-width: 160px;
+}
